fixed cv pdf not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1614,7 +1614,7 @@ input, select, textarea {
 				}
 
 				#main article .close:active:before {
-					background-color: rgba(255, 255, 255, 0.175);
+					background-color: rgba(97, 87, 151, 0.397);
 				}
 
 		@media screen and (max-width: 736px) {
@@ -1665,7 +1665,7 @@ input, select, textarea {
 		.copyright:hover {
 			color: white;
 			background: #2196f3;
-			box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+			box-shadow: 5px 10px 10px #2196f3, 5px 10px 40px #2196f3, 10px 15px 80px #2196f3;
 			transition: all 1s ease;
 		}
 
@@ -1876,6 +1876,6 @@ input, select, textarea {
 
 		.pdf {
 			width: 100%;
-			height: 2350vh;
+			height: 2350px;
 		}
 
